--- a/views/student.hbs
+++ b/views/student.hbs
@@ -1,1 +1,5 @@
 <a href='/logout'>Log Out {{currentUser.name}}</a>
+
+{{#each assignments}}
+  <li><a href='/{{this.id}}'>{{this.title}}</a></li>
+{{/each}}
