--- a/views/student.hbs
+++ b/views/student.hbs
@@ -1,4 +1,9 @@
 
-{{#each assignments}}
-  <li><a href='/assignments/{{this.id}}'>{{this.title}}</a></li>
-{{/each}}
+<ul class='assignments'>
+  {{#each assignments}}
+    <li>
+      <a href='/assignments/{{this.id}}'>{{this.title}}</a>
+      <small>due {{this.due_date}}</small>
+    </li>
+  {{/each}}
+</ul>
