--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
       <a href='/logout'>Log Out {{currentUser.name}}</a>
     {{/if}}
     {{{body}}}
+    <script src="/js/moment.js"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
