add percent (in)complete; fixes #2

--- a/views/instructor.hbs
+++ b/views/instructor.hbs
@@ -1,3 +1,7 @@
+<div class='stats'>
+  {{stats.percentComplete}}% complete.
+  {{stats.percentIncomplete}}% incomplete.
+</div>
 {{#each submissions}}
 <div class='submission'>
   <h2>{{this.student_name}} </h2>
