--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,3 +55,11 @@ h1 a{
   background: #FE442E;
   color:#fff;
 }
+
+.stats{
+  border: 1px solid #ccc;
+  padding:1em;
+  margin-left:-1em;
+  margin-right:-1em;
+  border-radius:4px;
+}
